--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body> 
     <section class="col-lg-12 col-md-12 col-xs-1 section section1" > 
     	<h1> Random Joke</h1>
-    
-    	<div class="container"></div>
-    	<div class="joke" id="jok"><br></div><br>
+    	<p id="jok"></p>
     </section>
 
     <section  >
